<resources>
    <string name="app_name">Easy File Recovery</string>
    <string name="str_unknown_error">unknown error</string>
    <string name="str_main_des">Query recovery files and restore with one click</string>
    <string name="str_picture_recover">Photo Recovery</string>
    <string name="str_voice_recover">Audio Recovery</string>
    <string name="str_video_recover">Video Recovery</string>
    <string name="str_doc_recover">Doc Recovery</string>
    <string name="str_backup_and_restore"><![CDATA[Backup & Restore]]></string>
    <string name="str_restored_folder">Restored Folder</string>
    <string name="str_backup_folder">Backup Folder</string>
    <string name="str_settings">Settings</string>
    <string name="str_privacy_amp_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="str_scanning_title">Scanning</string>
    <string name="str_scanning">Scanning…</string>
    <string name="str_scanning_done">Scan Completed!</string>
    <string name="str_check">Check</string>
    <string name="str_scan_result"><![CDATA[Found <font color="#4388FF">%s</font> recoverable files]]></string>
    <string name="str_hidden">Hidden</string>
    <string name="str_album">Album</string>
    <string name="str_storage">Storage</string>
    <string name="str_recover">Recover</string>
    <string name="str_no_files">No files</string>
    <string name="str_ok">OK</string>
    <string name="str_month">month</string>
    <string name="str_filter_files">Filter files</string>
    <string name="str_name">Name:</string>
    <string name="str_path">Path:</string>
    <string name="str_save_time">Save time:</string>
</resources>