<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:textColor="#202B44"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_settings" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDes"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:includeFontPadding="false"
        android:text="@string/str_main_des"
        android:textColor="#BF2C3954"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutBar" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnPic"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_main_pic"
        android:foreground="?selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toStartOf="@+id/btnVoice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDes">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp"
            android:layout_marginTop="13dp"
            android:includeFontPadding="false"
            android:text="@string/str_picture_recover"
            android:textColor="#FFD02F5B"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:src="@drawable/ic_arrow_pic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnVoice"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_main_voice"
        android:foreground="?selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPic"
        app:layout_constraintTop_toBottomOf="@+id/tvDes">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp"
            android:layout_marginTop="13dp"
            android:includeFontPadding="false"
            android:text="@string/str_voice_recover"
            android:textColor="#D0552F"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:src="@drawable/ic_arrow_voice"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnVideo"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ic_main_video"
        android:foreground="?selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toStartOf="@+id/btnDoc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPic">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp"
            android:layout_marginTop="13dp"
            android:includeFontPadding="false"
            android:text="@string/str_video_recover"
            android:textColor="#2F52D0"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:src="@drawable/ic_arrow_video"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnDoc"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_main_doc"
        android:foreground="?selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnVideo"
        app:layout_constraintTop_toBottomOf="@+id/btnPic">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="13dp"
            android:layout_marginTop="13dp"
            android:includeFontPadding="false"
            android:text="@string/str_doc_recover"
            android:textColor="#2F8DD0"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:src="@drawable/ic_arrow_doc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvBackupAndRestore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:includeFontPadding="false"
        android:text="@string/str_backup_and_restore"
        android:textColor="#FF202B44"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVideo" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btnRestore"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/bg_main_item"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/btnBackup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBackupAndRestore">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="17dp"
            android:src="@drawable/ic_main_restore" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:text="@string/str_restored_folder"
            android:textColor="#FFFF7979"
            android:textSize="13sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/btnBackup"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_main_item"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRestore"
        app:layout_constraintTop_toBottomOf="@+id/tvBackupAndRestore">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="17dp"
            android:src="@drawable/ic_main_back_up" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:text="@string/str_backup_folder"
            android:textColor="#3871FF"
            android:textSize="13sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>